--- a/msvc-users/src/main/resources/application.properties
+++ b/msvc-users/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=msvc-users
+server.port=8001
+
+# Spring DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/msvc_users?useSSL=false&serverTimezone=America/Lima
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
+spring.jpa.hibernate.naming.physical-strategy=org.amp.springcloud.msvc.users.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
+
+
+# Spring Data JPA Configuration
+spring.jpa.show-sql=true
