feat: files necessary for msvc-courses.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <!-- agregamos los modulos -->
     <modules>
         <module>msvc-users</module>
+        <module>msvc-cursos</module>
     </modules>
 
     <properties>
