--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <!-- agregamos los modulos -->
     <modules>
         <module>msvc-users</module>
-        <module>msvc-cursos</module>
+        <module>msvc-courses</module>
     </modules>
 
     <properties>
