refactor: modified path of package for courses.

--- a/msvc-courses/src/main/resources/application.properties
+++ b/msvc-courses/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=msvc-cursos
+spring.application.name=msvc-courses
 server.port=8002
 
 # Configuration for database in PostgresSQL
