--- a/msvc-courses/pom.xml
+++ b/msvc-courses/pom.xml
@@ -8,9 +8,9 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>org.amp.springcloud.msvc.cursos</groupId>
-	<artifactId>msvc-cursos</artifactId>
+	<artifactId>msvc-courses</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>msvc-cursos</name>
+	<name>msvc-courses</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
