--- a/msvc-users/src/main/resources/application.properties
+++ b/msvc-users/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.naming.physical-strategy=org.amp.springcloud.msvc.users.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.amp.springcloud.msvc.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
 
 
 # Spring Data JPA Configuration
