--- a/msvc-courses/pom.xml
+++ b/msvc-courses/pom.xml
@@ -91,8 +91,12 @@
 			<artifactId>swagger-models-jakarta</artifactId>
 			<version>2.2.15</version>
 		</dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
