--- a/msvc-courses/src/main/resources/application.properties
+++ b/msvc-courses/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=msvc-courses
 server.port=8002
 
 # Configuration for database in PostgresSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/msvc-courses
+spring.datasource.url=jdbc:postgresql://localhost:5432/msvc_courses
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
