--- a/msvc-users/src/main/resources/application.properties
+++ b/msvc-users/src/main/resources/application.properties
@@ -2,7 +2,12 @@ spring.application.name=msvc-users
 server.port=8001
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/msvc_users?useSSL=false&serverTimezone=America/Lima
+# para local
+# spring.datasource.url=jdbc:mysql://localhost:3306/msvc_users?useSSL=false&serverTimezone=America/Lima
+
+# para docker
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/msvc_users?useSSL=false&serverTimezone=America/Lima
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
