chore: Update Dockerfile to create logs directory and set log file name

--- a/msvc-users/src/main/resources/application.properties
+++ b/msvc-users/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.jpa.hibernate.naming.physical-strategy=org.amp.springcloud.msvc.shared.in
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
+
+# para los logs
+# logging.file.path=/app/logs
+
+# logs con nombres personalizados
+logging.file.name=/app/logs/msvc-users.log
