--- a/msvc-users/src/main/resources/application.properties
+++ b/msvc-users/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8001
 # spring.datasource.url=jdbc:mysql://localhost:3306/msvc_users?useSSL=false&serverTimezone=America/Lima
 
 # para docker
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/msvc_users?useSSL=false&serverTimezone=America/Lima
+spring.datasource.url=jdbc:mysql://mysql8:3306/msvc_users?useSSL=false&serverTimezone=America/Lima
 
 spring.datasource.username=root
 spring.datasource.password=root
